syntax="proto3";


// This is where the code files will be generated
option go_package="./proto";


package greet_service;

service GreetService{

    rpc SayHello(NoParam) returns (HelloResponse);

    rpc SayHelloServerStreaming(NamesList) returns (stream HelloResponse);

    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessagesList);

    rpc SayHelloBiDirectional(stream HelloRequest) returns (stream HelloResponse);

}


message NoParam{};

message HelloResponse{
    string messsage = 1;
}

message HelloRequest{
    string name = 1;
}

message NamesList{
    repeated string names = 1;
}

message MessagesList {
    repeated string messages = 1;
}